# trade-interfaces

./: .gitignore  LICENSE  README.md  buf.gen.yaml  docker-compose.yml  package.json  tsconfig.json
.github/workflows/: CI.yml
certs/: rootCA.crt  rootCA.key  server.crt  server.key
docs/examples/: RFQ_maker.ts
docs/examples/abi/: IValoremOptionsClearinghouse.json
docs/examples/typescript/: RFQ_maker.ts  RFQ_taker.ts  buf.gen.yaml  package.json  tsconfig.json
docs/examples/typescript/lib/: fromBNToH.ts
docs/examples/typescript/src/: RFQ_maker.ts  RFQ_taker.ts
docs/examples/typescript/src/lib/: fromBNToH.ts  fromHToBN.ts
examples/: RFQ_taker.ts  working_maker.ts  working_taker.ts
examples/abi/: IERC1155.json  ISeaportDomainRegistry.json  ISeaportOneOneValidator.json
examples/rust/: .gitignore  Cargo.toml  build.rs
examples/rust/examples/maker/: README.md  maker.rs  rfq_request.rs  seaport_helper.rs  settings.local.yaml  settings.rs  settings.yaml.template  soft_quote_request.rs  token_approvals.rs  tracing_utils.rs
examples/rust/examples/taker/: README.md  seaport_helper.rs  settings.local.yaml  settings.rs  settings.yaml.template  taker.rs  token_approvals.rs
examples/rust/src/: grpc_adapters.rs  lib.rs
examples/rust/src/bindings/: erc1155.rs  erc20.rs  mod.rs  seaport.rs  seaport_counduit_controller.rs  seaport_domain_registry.rs  seaport_validator.rs  valorem_clear.rs
examples/rust/src/utils/: mod.rs  session_interceptor.rs
examples/typescript/: buf.gen.yaml  buf.work.yaml  package.json  pnpm-lock.yaml  proto-symlink  tsconfig.json
examples/typescript/src/: RFQ_maker.ts  RFQ_taker.ts
examples/typescript/src/entities/: index.ts  maker.ts  option.ts  taker.ts
examples/typescript/src/entities/base/: contract.ts  trader.ts
examples/typescript/src/entities/contracts/: clearinghouse.ts  erc20.ts  index.ts  seaport.ts
examples/typescript/src/lib/: abis.ts  constants.ts  getOptionId.ts  grpc.ts
examples/typescript/src/utils/: index.ts  siwe.ts  timestamps.ts
examples/typescript/src/utils/hi-lo-bit-segmentation/: bigIntToHiLo.ts  hiLoToBigInt.ts  index.ts  parseQuoteResponse.ts
lib/: fromBNToH.ts
proto/quay/: session.proto
proto/trade/: auth.proto  session.proto  types.proto
proto/valorem/trade/v1/: auth.proto  featured_instruments.proto  fees.proto  instruments.proto  rfq.proto  seaport.proto  soft_quote.proto  soft_quotes.proto  spot.proto  sq.proto  types.proto
quay/: auth.proto  rfq.proto  seaport.proto  session.proto
