[package]
name = "valorem-trade-interfaces"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO(Factor out non dev dependencies)
anyhow = "1.0.71"
arrayref = "0.3.7"
http = "0.2.9"
prost = "0.11.8"
serde_json = "1.0.95"
time = "0.3.20"
tokio-stream = "0.1.12"
tracing = "0.1.37"

[dev-dependencies]
anyhow = "1.0.71"
backon = "0.4.1"
rpassword = "7.2.0"

[dependencies.config]
version = "0.13"
features = ["yaml"]
optional = false

[dependencies.ethers]
version = "2.0.0"
features = ["abigen", "ws", "rustls", "ipc"]
optional = false

[dependencies.serde]
version = "1.0.160"
features = ["derive"]
optional = false

[dependencies.siwe]
version = "0.5.0"
features = ["serde"]
optional = false

[dependencies.tokio]
version = "1.27"
features = ["macros", "rt-multi-thread"]
optional = false

[dependencies.tonic]
version = "0.9.1"
features = ["tls"]
optional = false

[build-dependencies]
tonic-build = "0.9.1"

[lib]
path = "src/lib.rs"
plugin = false
proc-macro = false
required-features = []

[[example]]
path = "examples/maker/maker.rs"
name = "maker"
plugin = false
proc-macro = false

[[example]]
path = "examples/taker/taker.rs"
name = "taker"
plugin = false
proc-macro = false
