[package]
name = "valorem-trade-interfaces"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayref = "0.3.7"
prost = "0.11.8"
serde_json = "1.0.95"

[dependencies.ethers]
version = "2.0.0"
features = ["abigen", "ws", "rustls", "ipc"]
optional = false

[dependencies.serde]
version = "1.0.160"
features = ["derive"]
optional = false

[dependencies.tonic]
version = "0.9.1"
features = ["tls"]
optional = false

[dev-dependencies]
config = "*"
http = "*"
log = "*"
pretty_env_logger = "*"
rpassword = "*"
time = "*"
tokio-stream = "*"

[dev-dependencies.siwe]
version = "*"
features = ["serde"]
optional = false

[dev-dependencies.tokio]
version = "*"
features = ["macros", "rt-multi-thread"]
optional = false

[build-dependencies]
tonic-build = "0.9.1"
prost = "0.12.1"
protox = "0.5.0"

[lib]
path = "src/lib.rs"
plugin = false
proc-macro = false
required-features = []

[[example]]
path = "examples/maker/maker.rs"
name = "maker"
plugin = false
proc-macro = false

[[example]]
path = "examples/taker/taker.rs"
name = "taker"
plugin = false
proc-macro = false
